--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-    "liveServer.settings.port": 5501
+    "liveServer.settings.port": 5501,
+    "cSpell.words": [
+        "Cras",
+        "Dapibus",
+        "Vestibulum",
+        "facilisis",
+        "justo",
+        "odio"
+    ]
 }
